--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,6 @@
 DB_HOST='localhost'
 DB_PORT=5432
 DB_USERNAME='user'
-DB_PASSWORD='password'
+DB_PASSWORD='KOLFW'
 DB_NAME='ddh'
 (DB_HOST = "lof")
