--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,6 @@
 DB_HOST='localhost'
 DB_PORT=5432
 DB_USERNAME='user'
-DB_PASSWORD='password'
-DB_NAME='ddh'
+DB_hist
+DB_NAME=Lord
+(DB_HOST = "lof")
